Fix: The PR commit title field overflows due to `suggest-commit-title-limit`

--- a/source/features/monospace-textareas.css
+++ b/source/features/monospace-textareas.css
@@ -1,8 +1,8 @@
 /* Limit width of commit title to 72 characters */
 .rgh-monospace-textareas :is(#merge_title_field, #commit-summary-input) {
-	width: 72ch;
+	/* 12px for the padding and 1px for the border [TODO] */
+	width: calc(72ch + 13px*2);
 	max-width: 100%;
-	box-sizing: content-box;
 }
 
 .rgh-monospace-textareas :is(#merge_title_field, #commit-summary-input, textarea) {
